JWT-Authentifizierung, Admin